creusot/tests/should_fail/prusti/logic/deref.stderr
error[creusot]: `&'a mut X` cannot be moved from `'0h` to `'curr` since it doesn't live long enough
                `'a` doesn't outlive `'curr`
 --> deref.rs:6:6
  |
6 |     *x
  |      ^

error: aborting due to previous error

